--- a/themes/landscape/layout/_partial/header.ejs
+++ b/themes/landscape/layout/_partial/header.ejs
@@ -3,7 +3,9 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="<%- url_for() %>" id="logo"><%= config.title %></a>
+        <a href="<%- url_for() %>" id="logo">
+          <%- image_tag('css/images/LOGO.png', {width:'100px'}) %>
+        </a>
       </h1>
       <% if (theme.subtitle){ %>
         <h2 id="subtitle-wrap">
