--- a/themes/landscape/source/css/_partial/highlight.styl
+++ b/themes/landscape/source/css/_partial/highlight.styl
@@ -1,16 +1,32 @@
 // https://github.com/chriskempson/tomorrow-theme
-highlight-background = #2d2d2d
-highlight-current-line = #393939
-highlight-selection = #515151
-highlight-foreground = #cccccc
-highlight-comment = #999999
-highlight-red = #f2777a
-highlight-orange = #f99157
-highlight-yellow = #ffcc66
-highlight-green = #99cc99
-highlight-aqua = #66cccc
-highlight-blue = #6699cc
-highlight-purple = #cc99cc
+// highlight-background = #2d2d2d
+// highlight-current-line = #393939
+// highlight-selection = #515151
+// highlight-foreground = #cccccc
+// highlight-comment = #999999
+// highlight-red = #f2777a
+// highlight-orange = #f99157
+// highlight-yellow = #ffcc66
+// highlight-green = #99cc99
+// highlight-aqua = #66cccc
+// highlight-blue = #6699cc
+// highlight-purple = #cc99cc
+// Monokai
+highlight-background = #272822
+// highlight-current-line = #3E3D32
+// highlight-selection = #49483E
+highlight-foreground = #F8F8F2
+highlight-comment = #75715E
+highlight-red = #F92672
+highlight-orange = #FD971F
+highlight-yellow = #e6db74
+highlight-green = #A6E22E
+highlight-aqua = #A1EFE4
+highlight-blue = #66D9EF
+highlight-purple = #AE81FF
+
+
+// #f8f8f2
 
 $code-block
   background: highlight-background
@@ -107,8 +123,9 @@ $line-numbers
 
 pre
   .comment
-  .title
     color: highlight-comment
+  .title
+    color: highlight-green
   .variable
   .attribute
   .tag
@@ -122,11 +139,15 @@ pre
   .css .class
   .css .pseudo
     color: highlight-red
-  .number
   .preprocessor
+    color: highlight-red
   .built_in
+    color: highlight-blue
   .literal
+  .number
+    color: highlight-purple
   .params
+    color: highlight-foreground
   .constant
     color: highlight-orange
   .class
@@ -134,6 +155,8 @@ pre
   .css .rules .attribute
     color: highlight-green
   .string
+  .meta-string
+    color: highlight-yellow
   .value
   .inheritance
   .header
@@ -147,10 +170,13 @@ pre
   .python .title
   .ruby .function .title
   .ruby .title .keyword
+  .meta-keyword
+    color: highlight-red
   .perl .sub
   .javascript .title
   .coffeescript .title
     color: highlight-blue
   .keyword
+    color: highlight-red
   .javascript .function
     color: highlight-purple
